* Changelog

** TBD

*Fixes*

- Use updated note when reordering meta.
- Define =vino-entry-meta-props-order= as =var= and not a =const=.

** v0.4.0

This release focuses on several key areas. First, it introduces powerful extension hooks that allow for building custom and complex flows on top of Vino. Second, it implements a basic solution for cellar tracking. Third, it simplifies the internals by adopting the latest features provided by the Vulpea library.

Unfortunately, this release contains many breaking changes. If you need assistance, please start a discussion.

Future releases will focus on fixing bugs and improving the Inventory solution.

*Breaking changes*

- Completely get rid of =vino-db=. Why? TL;DR =vulpea-db= is powerful enough to cover all the use cases I have ever faced. Over the last 2 years I have never used =vino-db=.
- Get rid of meta slot in =vino-rating=.
- Get rid of 'generic' inventory flow in favour of =vino-inv= plugin.
- Use 5-based scale for ratings by default and introduce means to change that.
- Add country to vino entry. This also affects all functions related to region/appellation selection and creation. Refer to documentation for more information.
- Remove resources from vino entry. The functionality can be replicated (if needed) using =vino-entry-create-handle-functions=.
- Get rid of =vino-entry= struct. Since =vulpea-note= became powerful enough there is little value in =vino-entry=.
- Merge =vino-entry-update= and =vino-entry-update-title=. These days Vulpea provides enough cached information to make the later fast enough to be merged with regular =vino-entry-update=.
- Sort metadata when updating note or setting origin.

*Features*

- Introduce rating precision, controlled by =vino-rating-precision=. See its documentation for more information.
- Introduce =vino-entry-create-handle-functions= as an extension point for vino entry.
- Introduce =vino-entry-update-handle-functions= as an extension point for vino entry.